--- a/src/Home.css
+++ b/src/Home.css
@@ -1,3 +1,13 @@
+
+.home{
+   display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1500px;
+
+}
+
 .Home_image{
 
     width: 100%;
@@ -5,4 +15,19 @@
     margin-bottom: -150px;
     mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
 
+}
+
+.home_row{
+
+    display: flex;
+    z-index: 1;
+    margin-left: 5px;
+    margin-right: 5px;
+
+    
+}
+
+.home_row:hover{
+
+    transform: scale(1.1);
 }
