--- a/src/header.css
+++ b/src/header.css
@@ -71,3 +71,16 @@
     margin-right: 10px;
 }
 
+.header_logo:hover{
+
+    transform: scale(1.2)
+}
+.header_option:hover{
+
+    transform: scale(1.3);
+}
+
+.header_optionBasket:hover{
+
+    transform: scale(1.3);
+}
